--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,12 +21,12 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://i.imgur.com/MKIKx6J.png);
+  --theme-background-image: url(https://i.imgur.com/lNgVABQ.png);
 
   /*
     Main Theme Color
   */
-  --main-theme-color: rgb(221, 145, 153);
+  --main-theme-color: rgb(0, 193, 255);
 
   /*
     Main Theme Transparency
